Drop guava (#119)
* initial removal

* cleanups